Adjusted classes on the project.